--- a/style.css
+++ b/style.css
@@ -55,3 +55,60 @@
         height: 30px;
     }
   }
+/* hero */
+.hero{
+  background-image: url(./img/hero.png);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 94px 40px;
+  position: relative;
+}
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-hero-overlay);
+}
+.hero-container{
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  justify-content: flex-end;
+  z-index: 1;
+}
+.hero-texts{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.hero-main-copy{
+  font-family: var(--font-family-heading);
+  color: var(--color-accent-yellow);
+  font-size: 64px;
+  line-height: 1;
+  margin: 0;
+  letter-spacing: 0.05em;
+}
+.hero-main-copy-accent{
+  color: var(--color-accent-red);
+}
+.hero-sub-copy{
+  margin: 0;
+  color: var(--color-accent-yellow);
+}
+@media (max-width: 750px) {
+.hero {
+  padding: 40px 20px;
+}
+.hero-container {
+  justify-content: flex-start;
+}
+.hero-texts {
+  gap: 20px;
+}
+}
