--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
   }
   .header-logo-wrapper{
     margin: 0;
@@ -64,6 +69,7 @@
   align-items: center;
   padding: 94px 40px;
   position: relative;
+  margin-top:80px ;
 }
 .hero::after {
   content: "";
@@ -104,6 +110,7 @@
 @media (max-width: 750px) {
 .hero {
   padding: 40px 20px;
+  margin-top: 60px;
 }
 .hero-container {
   justify-content: flex-start;
